--- a/docs/components/render/input.html
+++ b/docs/components/render/input.html
@@ -1,3 +1,12 @@
 
 
+<p class="input"><input type="text" value="テキスト"></p>
+<p class="input"><input type="checkbox"></p>
+
+<p class="text">search</p>
+<p class="input"><input type="search"></p>
+
+<p class="input"><input type="radio"></p>
+<p class="input"><input type="radio" checked></p>
+<p class="input"><input type="radio" disabled checked></p>
 
