--- a/docs/components/render/thumbnail.html
+++ b/docs/components/render/thumbnail.html
@@ -1,3 +1,163 @@
 
 
+<h3 class="title">wrap要素</h3>
+<p class="thumbnail"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail round"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail circle"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<h3 class="title">img要素</h3>
+<img class="thumbnail" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail round" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail circle" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+
+<h3 class="title">カラー</h3>
+
+<p class="thumbnail small border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border primary"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border green"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border blue"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border orange"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border red"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<img class="thumbnail small border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border primary" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border green" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border blue" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border orange" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border red" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="45" alt="person"/>-->
+
+<br/><br/>
+
+<p class="thumbnail small frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame primary"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame green"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame blue"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame orange"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame red"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<img class="thumbnail small frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame primary" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame green" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame blue" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame orange" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame red" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="45" alt="person"/>-->
+
+<h3 class="title">サイズ</h3>
+<p class="thumbnail mini"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ round</h4>
+
+<p class="thumbnail mini round"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small round"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail round"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large round"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big round"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free round"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini round" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small round" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail round" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large round" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big round" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<h4 class="title">サイズ circle</h4>
+
+<p class="thumbnail mini circle"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small circle"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail circle"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large circle"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big circle"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini circle" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small circle" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail circle" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large circle" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big circle" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ border</h4>
+
+<p class="thumbnail mini border"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail border"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large border"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big border"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini border" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail border" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large border" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big border" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ frame</h4>
+
+<p class="thumbnail mini frame"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail frame"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large frame"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big frame"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini frame" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail frame" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large frame" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big frame" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<h4 class="title">サイズ Caption</h4>
+
+<p class="thumbnail mini caption">
+  <img src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail small caption">
+  <img src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail caption">
+  <img src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail large caption">
+  <img src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail big caption">
+  <img src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+  <span class="title">title</span>
+</p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
 
